upgrade to Java 26: remove Lombok, use records and virtual threads, add unit tests